add custom fields for Brasil Participativo

--- a/app/views/decidim/extra_user_fields/_registration_form.html.erb
+++ b/app/views/decidim/extra_user_fields/_registration_form.html.erb
@@ -42,7 +42,17 @@
       <% end %>
 
       <%# Block ExtraUserFields SignUpFormFields %>
+      <% if current_organization.activated_extra_field?(:document_number) %>
+        <div class="field">
+          <%= f.text_field :document_number %>
+        </div>
+      <% end %>
 
+      <% if current_organization.activated_extra_field?(:document_image) %>
+        <div class="field">
+          <%= f.file_field :document_image, multiple: false, direct_upload: false %>
+        </div>
+      <% end %>
       <%# EndBlock %>
     </div>
   </div>
