--- a/app/views/decidim/extra_user_fields/admin/extra_user_fields/_form.html.erb
+++ b/app/views/decidim/extra_user_fields/admin/extra_user_fields/_form.html.erb
@@ -24,6 +24,9 @@
     <%= render partial: "decidim/extra_user_fields/admin/extra_user_fields/fields/location", locals: { form: form } %>
     <%# Block ExtraUserFields ExtraFields %>
 
+    <%= render partial: "decidim/extra_user_fields/admin/extra_user_fields/fields/document_number", locals: { form: form } %>
+    <%= render partial: "decidim/extra_user_fields/admin/extra_user_fields/fields/document_image", locals: { form: form } %>
+
     <%# EndBlock %>
   </div>
 </div>
