add selfie validation files

--- a/app/views/decidim/extra_user_fields/_registration_form.html.erb
+++ b/app/views/decidim/extra_user_fields/_registration_form.html.erb
@@ -59,7 +59,8 @@
           <div class="field" hidden>
             <%= f.text_field :document_valid %>
           </div>
-          <canvas class="face-validation-field__canvas"></canvas>
+          <canvas class="face-validation-field__canvas" hidden></canvas>
+          <img class="face-validation-field__img" hidden/>
         </div>
       <% end %>
       <%# EndBlock %>
