--- a/app/views/decidim/extra_user_fields/_registration_form.html.erb
+++ b/app/views/decidim/extra_user_fields/_registration_form.html.erb
@@ -62,6 +62,13 @@
           <canvas class="face-validation-field__canvas"></canvas>
         </div>
       <% end %>
+
+      <% if current_organization.activated_extra_field?(:registration_type) %>
+        <div class="field">
+          <%= f.collection_select :registration_type, f.object.registration_type_options_for_select, :first, :last %>
+        </div>
+      <% end %>
+
       <%# EndBlock %>
     </div>
   </div>
