--- a/app/views/decidim/extra_user_fields/admin/extra_user_fields/fields/_document_type.html.erb
+++ b/app/views/decidim/extra_user_fields/admin/extra_user_fields/fields/_document_type.html.erb
@@ -1,6 +1,6 @@
 <div class="card-section">
   <div class="row column">
     <p><%= t(".description") %></p>
-    <%= form.check_box :registration_type, label: t(".label") %>
+    <%= form.check_box :document_type, label: t(".label") %>
   </div>
 </div>
