feat: add pt br translations

--- a/app/views/decidim/extra_user_fields/admin/extra_user_fields/_form.html.erb
+++ b/app/views/decidim/extra_user_fields/admin/extra_user_fields/_form.html.erb
@@ -36,6 +36,7 @@
   <div class="card-section">
     <div>
       <h3>Componentes Permitidos</h3>
+      <p>Habilite quais componentes usuários estrangeiros terão permissão para interagir na plataforma.</p>
     </div>
 
     <div class="row column">
