--- a/app/views/decidim/extra_user_fields/_registration_form.html.erb
+++ b/app/views/decidim/extra_user_fields/_registration_form.html.erb
@@ -110,7 +110,7 @@
     });
 
     document.addEventListener("DOMContentLoaded", function() {
-      const uploadButton = document.querySelector('.upload-button span');
+      const uploadButtons = document.querySelectorAll('.upload-button span');
       uploadButtons.forEach(function(button) {
         if (button && button.textContent.trim() === "Selecione o arquivo") {
           button.textContent = "Select the file";
